adding live-page Link.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 /* Import Google font - Poppins */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -13,7 +12,7 @@ body {
   align-items: center;
   justify-content: center;
   background: #f0faff;
-  background:url('https://bestwallpapers.in/wp-content/uploads/2021/07/joker-batman-the-dark-knight-4k-wallpaper-scaled.jpg') no-repeat;
+  background:url('Joker.jpg');
   
   /*--------- if background image are not working then download the image on my github -------------*/
   
